<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageLatestMovie"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_size_300_dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/capitamarvel" />

        <TextView
            android:id="@+id/textViewLatestTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size_16_dp"
            android:layout_marginEnd="@dimen/default_size_16_dp"
            android:layout_marginBottom="@dimen/default_size_32_dp"
            android:shadowColor="@color/black"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="8"
            android:textColor="@color/white"
            android:textSize="@dimen/default_size_24_sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageLatestMovie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Wonder Woman" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/shadowColor"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="8"
            android:text="@string/movie_classic"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_18_sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageLatestMovie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLatestTitle" />

        <TextView
            android:id="@+id/tvPopularMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size_8_dp"
            android:layout_marginTop="@dimen/default_size_32_dp"
            android:text="@string/movie_popular"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_18_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLatestMovie" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularRecycler"
            android:layout_width="@dimen/default_size_0_dp"
            android:layout_height="@dimen/default_size_220_dp"
            android:layout_marginTop="@dimen/default_size_8_dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPopularMovies"
            tools:listitem="@layout/item_recycler" />

        <TextView
            android:id="@+id/tvUpcomingMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size_8_dp"
            android:layout_marginTop="@dimen/default_size_32_dp"
            android:layout_marginBottom="@dimen/default_size_8_dp"
            android:text="@string/movie_upcoming"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_18_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popularRecycler" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcUpcomingMovies"
            android:layout_width="@dimen/default_size_0_dp"
            android:layout_height="@dimen/default_size_220_dp"
            android:layout_marginTop="@dimen/default_size_8_dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUpcomingMovies"
            tools:listitem="@layout/item_recycler" />


        <TextView
            android:id="@+id/tvTopRatedMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size_8_dp"
            android:layout_marginTop="@dimen/default_size_32_dp"
            android:text="@string/movie_rated"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_18_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcUpcomingMovies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcTopRated"
            android:layout_width="@dimen/default_size_0_dp"
            android:layout_height="@dimen/default_size_220_dp"
            android:layout_marginTop="@dimen/default_size_8_dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTopRatedMovies"
            tools:listitem="@layout/item_recycler" />

        <TextView
            android:id="@+id/tvNowPlayng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size_8_dp"
            android:layout_marginTop="@dimen/default_size_32_dp"
            android:layout_marginBottom="@dimen/default_size_8_dp"
            android:text="@string/movie_now_theaters"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_18_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcTopRated" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcNowPlaying"
            android:layout_width="@dimen/default_size_0_dp"
            android:layout_height="@dimen/default_size_220_dp"
            android:layout_marginTop="@dimen/default_size_8_dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNowPlayng"
            tools:listitem="@layout/item_recycler" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>